# RAG

./: .gitignore  README.md  pyproject.toml  run.py
app/: cli.py  main.py
app/api/routes/: document.py
app/core/: config.py
app/frontend/: streamlit_app.py
app/models/: document.py
app/services/: document.py  llm.py  rag.py  rag_service.py
notebooks/: final.ipynb  search_engine.ipynb  test.ipynb
