[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RAG_case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-text-splitters",
    "langchain-community",
    "langgraph",
]

[tool.setuptools]
py-modules = []