[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RAG_case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-mistralai",
    "langchain-huggingface",
    "langgraph",
    "chromadb",
    "beautifulsoup4",
    "typing-extensions",
    "fastapi",
    "uvicorn", 
    "streamlit",
    "requests",
    "pypdf",
    "python-multipart"
    "loguru"
]

[tool.setuptools]
py-modules = []